# M2-ISA-R

./: pyproject.toml  setup.py
m2isar/backends/coredsl2_set/: visitor.py  writer.py
m2isar/backends/coverage/: coverage_lcov.py
m2isar/backends/disass/: disass.py
m2isar/backends/enctree/: __init__.py  main.py  plot.py  utils.py
m2isar/backends/etiss/: architecture_writer.py  instruction_generator.py  instruction_transform.py  instruction_writer.py  writer.py
m2isar/backends/isa_manual/: .gitignore  package.json  visitor.py  writer.py
m2isar/backends/viewer/: set_viewer.py  treegen.py  viewer.py
m2isar/frontends/coredsl2/: CoreDSL2.g4  architecture_model_builder.py  behavior_model_builder.py  load_order.py  parser.py
m2isar/frontends/coredsl2_set/: CoreDSL2.g4  architecture_model_builder.py  importer.py  parser.py
m2isar/metamodel/: __init__.py  arch.py  behav.py  code_info.py
m2isar/metamodel/utils/: expr_simplifier.py  function_staticness.py  function_throws.py  scalar_staticness.py
m2isar/transforms/collect_outline_tasks/: __init__.py  collect.py
m2isar/transforms/drop_others/: optimizer.py
m2isar/transforms/drop_unused/: optimizer.py  track_uses.py
m2isar/transforms/eliminate_mod_rfs/: transform.py  visitor.py
m2isar/transforms/eliminate_rd_cmp_zero/: transform.py  visitor.py
m2isar/transforms/eliminate_scalar_assignments/: transform.py
m2isar/transforms/encode_instructions/: encoder.py  instr_encodings.py  operands.py
m2isar/transforms/inline_functions/: transform.py  visitor.py
m2isar/transforms/split_io/: insert_io.py  (+2 more)
(+15 files in other folders)
