# SPDX-License-Identifier: Apache-2.0
#
# This file is part of the M2-ISA-R project: https://github.com/tum-ei-eda/M2-ISA-R
#
# Copyright (C) 2022
# Chair of Electrical Design Automation
# Technical University of Munich

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "m2isar"
dynamic = ["version"]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
	"mako",
	"antlr4-python3-runtime == 4.13.1",
	"tqdm"
]

[project.scripts]
etiss_writer = "m2isar.backends.etiss.writer:main"
coredsl2_parser = "m2isar.frontends.coredsl2.parser:main"
m2isar_viewer = "m2isar.backends.viewer.viewer:main"
m2isar2lcov = "m2isar.backends.coverage.coverage_lcov:main"

[tool.setuptools.package-data]
"*" = ["*.mako"]

[tool.setuptools_scm]